--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -18,6 +18,26 @@ body {
     width: 100%;
     z-index: 10;
 }
+ 
+#edgePopup {
+    background: #ffffff;
+    padding: 10px;
+    border: 1px solid #333;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    max-width: 200px;
+    font-size: 14px;
+}
+
+#nodePopup {
+    background: #ffffff;
+    padding: 10px;
+    border: 1px solid #333;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    max-width: 200px;
+    font-size: 14px;
+}
 
 .header h1 {
     margin: 0;
